--- a/templates/myfarm/about.html
+++ b/templates/myfarm/about.html
@@ -80,14 +80,9 @@
 <section id="cta" class="hero d-flex align-items-center text-center">
   <div class="container-fluid">
      <h1 class="display-4 fw-bold text-white">🌱 Visit or Order from MyPinky</h1>
-   <a href="{% url 'contact' %}" style="color: #1BAE5D; text-decoration: none; font-weight: 600;">
-  Contact Us
-</a>
-<a href="{% url 'contact' %}" style="color: #1BAE5D; text-decoration: none; font-weight: 600;">
-  Contact Us
-</a>
-
-
+    <a href="{% url 'contact' %}" 
+       class="btn btn-success btn-lg mt-3 px-4 py-2 fw-bold">
+      Contact Us
     </a>
   </div>
 </section>
